Google icon managed

--- a/didattica/index.html
+++ b/didattica/index.html
@@ -575,15 +575,18 @@ aria-label="Scopri i contenuti">
     class="c-tabs-nav__item "
     data-item="4"
     role="presentation">
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdp8m9NffynYvGbTrzt2Z-Nx7S5GZmhO9-Mpo6iGYHoRY-LYQ/viewform"
+    <a
 aria-controls="tab-panel-4" data-g-event="atv-cta-button" data-g-action="clicked" data-g-label="Google Assistant:Get Answers"       href="#tab-panel-4"
       class="c-tabs-nav__link"
       role="tab"
 aria-label="Ricevi risposte">
-                    <svg aria-hidden="false" role="presentation" class="icon icon--svg icon--playlist" height="38" viewBox="0 0 36 36" width="38" xmlns="http://www.w3.org/2000/svg">
+                    <!--<svg aria-hidden="false" role="presentation" class="icon icon--svg icon--playlist" height="38" viewBox="0 0 36 36" width="38" xmlns="http://www.w3.org/2000/svg">
     <path d="M18 15v6.24h8.72c-.67 3.76-3.93 6.5-8.72 6.5-5.28 0-9.57-4.47-9.57-9.75S12.72 8.25 18 8.25c2.38 0 4.51.82 6.19 2.42v.01l4.51-4.51C25.93 3.59 22.32 2 18 2 9.16 2 2 9.16 2 18s7.16 16 16 16c9.24 0 15.36-6.5 15.36-15.64 0-1.17-.11-2.29-.31-3.36H18z"/>
     <path fill="none" d="M2 2h32v32H2z"/>
-  </svg>
+  </svg>-->
+        <svg aria-hidden="false" role="presentation" class="icon icon--svg icon--games" height="36" viewBox="0 0 27 20" width="36" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20,8 C19.45,8 19,7.55 19,7 C19,6.45 19.45,6 20,6 C20.55,6 21,6.45 21,7 C21,7.55 20.55,8 20,8 L20,8 Z M18,6 C17.45,6 17,5.55 17,5 C17,4.45 17.45,4 18,4 C18.55,4 19,4.45 19,5 C19,5.55 18.55,6 18,6 L18,6 Z M18,11 C17.45,11 17,10.55 17,10 C17,9.45 17.45,9 18,9 C18.55,9 19,9.45 19,10 C19,10.55 18.55,11 18,11 L18,11 Z M16,8 C15.45,8 15,7.55 15,7 C15,6.45 15.45,6 16,6 C16.55,6 17,6.45 17,7 C17,7.55 16.55,8 16,8 L16,8 Z M12,8.2 L9.2,8.2 L9.2,11 L7.8,11 L7.8,8.2 L5,8.2 L5,6.8 L7.8,6.8 L7.8,4 L9.2,4 L9.2,6.8 L12,6.8 L12,8.2 Z M24.9345,5.33333333 C24.408,2.26666667 21.6945,0 18.441,0 L8.559,0 C5.3055,0 2.6055,2.26666667 2.0655,5.33333333 C2.0655,5.33333333 0,17.0666667 0,17.24 C0,18.76 1.2555,20 2.7945,20 C3.564,20 4.266,19.7333333 4.779,19.2266667 L9.45,14.6666667 L17.55,14.6666667 L22.221,19.2266667 C22.734,19.7333333 23.4225,20 24.2055,20 C25.758,20 27,18.76 27,17.24 C27,17.0666667 24.9345,5.33333333 24.9345,5.33333333 L24.9345,5.33333333 Z" stroke="none" fill-rule="evenodd"></path>
+        </svg>
  <span class="atv-playing__tabs-icon-title">Apple Academy Technology</span>
 
     </a>
