SpringAOP slide added

--- a/didattica/index.html
+++ b/didattica/index.html
@@ -932,7 +932,7 @@ aria-label="APP E GIOCHI">
         <ul class="atv-up-next__tab-list">
 
             <li class="atv-up-next__tab-item">
-                <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/SpringAOP.pptx">
+                <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/SpringAOP.pdf">
                     <img alt="SpringAOP" data-lazy-src="./1s.png"/></a>
                 <h3>Spring AOP</h3>
             </li>
