--- a/didattica/index.html
+++ b/didattica/index.html
@@ -952,8 +952,7 @@ aria-label="APP E GIOCHI">
         </ul>
       </div>
       <!-- HTML -->
-      <div
-              class="c-tabs__section"
+      <div class="c-tabs__section"
               id="atv-up-next-panel-html"
               aria-labelledby="atv-up-next-tab-html"
               role="tabpanel">
